# haskell-differentiator

./: Differentiate.hs  LICENSE  Main.hs  Polynomial.hs  README.md  haskell-differentiator.cabal
src/: Parser.hs  Syntax.hs
src-exec/: Main.hs
