name: haskell-differentiator
version: 0.1
author: yu-i9
synopsis: a toy differentiator written in haskell
cabal-version: >= 1.10
build-type: Simple

Library
    Hs-source-dirs: src
    Default-Language: Haskell2010
    Build-depends:  base >= 4 && < 5
                  , parsec
                  , containers
                  , mtl
                  , filepath
                  , text

    Exposed-modules: Syntax
                     Parser

    ghc-options: -Wall

executable main
    Hs-source-dirs: src-exec
    main-is: Main.hs
    Default-Language: Haskell2010
    build-depends:  base >= 4 && < 5
                  , filepath
                  , parsec
                  , haskell-differentiator

    ghc-options:  -Wall
